# atomCAD

./: .gitattributes  .gitignore  AGENTS.md  AUTHORS  Cargo.toml  Cross.toml  LICENSE-3RD-PARTY  LICENSE-3RD-PARTY.md  README.md  Trunk.toml  atomcad-cli  atomcad-cli.ps1  atomcad-skill.md  build-distrobox.md  build.rs  build_linux_release.sh  build_macos_release.sh  build_windows_release.ps1  check.sh  flutter_rust_bridge.yaml  ideas.md  index.html  pubspec.yaml  run.ps1  run_atomcad_win.ps1  shell.nix
crates/app/: Cargo.toml
crates/app/src/: app.rs  lib.rs  platform.rs  plugin.rs  schedule.rs
crates/app_config/: Cargo.toml
crates/app_config/src/: lib.rs  serialization.rs  setting_value.rs  window_settings.rs
crates/asbytes/: Cargo.toml
crates/asbytes/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: after_use.rs  as_bytes.rs  bounding_box.rs  ids.rs  lib.rs
crates/dynamics/: Cargo.toml
crates/dynamics/src/: lib.rs
crates/event-loop-waker/: Cargo.toml
crates/event-loop-waker/src/: lib.rs  platform.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs  platform.rs
crates/menu/: Cargo.toml
crates/menu/src/: blueprint.rs  lib.rs  plugin.rs
crates/molecule/: Cargo.toml
crates/molecule/src/: assets.rs  buffers.rs  components.rs  config.rs  draw.rs  dynamics.rs  edit.rs  extract.rs  feature.rs  lib.rs  molecule.rs  molecule_editor.rs  pdb.rs  pipelines.rs  plugin.rs  uniforms.rs  vsepr.rs
crates/periodic-table/: Cargo.toml
crates/periodic-table/src/: lib.rs
crates/render/: Cargo.toml  build.rs
crates/render/shaders/: billboard.bindless.vert  billboard.frag  billboard.vert  billboard.wgsl  blit.frag  blit.vert  fxaa.comp  patch.comp
crates/render/src/: atom_buffer.rs  atoms.rs  bind_groups.rs  bond_buffer.rs  buffer_vec.rs  camera.rs  context.rs  error.rs  gpu_vec.rs  lib.rs  parts.rs  utils.rs  world.rs
crates/rendering/: Cargo.toml  build.rs
crates/rendering/src/: encoder_wrapper.rs  lib.rs  macros.rs  most_recent.rs  scene.rs
crates/scene/: Cargo.toml  feature.md
crates/scene/src/: assembly.rs  dynamics.rs  feature-old.rs  feature.rs  ids.rs  lib.rs  molecule.rs  mrsim.rs  pdb.rs  utils.rs  vsepr.rs  world.rs
crates/simulation-import/: Cargo.toml  README.md
crates/simulation-import/src/: mrsim_txt.rs
crates/simulation-import/tests/: mrsim_txt.rs
crates/window/: Cargo.toml
crates/window/src/: exit.rs  lib.rs  plugin.rs  system.rs  window.rs
crates/winit-runner/: Cargo.toml
crates/winit-runner/src/: event_loop.rs  lib.rs
csgrs/: .envrc  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  flake.nix  readme.md  typos.toml
csgrs/.cargo/: config.toml
csgrs/.github/: FUNDING.yml
csgrs/.github/workflows/: rust.yml
csgrs/examples/: README.md  adjacency_demo.rs  multi_format_export.rs
csgrs/examples/wasm-nuxt4/: README.md  nuxt.config.ts  package.json
csgrs/hershey-fonts/: LICENSE
csgrs/nix/: overlay.nix  package.nix  shell.nix
csgrs/src/: aabb.rs  errors.rs  float_types.rs  lib.rs  main.rs  tests.rs  traits.rs  wasm.rs
csgrs/src/io/: amf.rs  dxf.rs  mod.rs  obj.rs  ply.rs  stl.rs  svg.rs
csgrs/src/mesh/: bsp.rs  bsp_parallel.rs  connectivity.rs  convex_hull.rs  flatten_slice.rs  manifold.rs  metaballs.rs  mod.rs  plane.rs  polygon.rs  quality.rs  sdf.rs  shapes.rs  smoothing.rs  tpms.rs  vertex.rs
csgrs/src/nurbs/: mod.rs  nurbs.rs
csgrs/src/sketch/: extrudes.rs  hershey.rs  image.rs  metaballs.rs  mod.rs  offset.rs  shapes.rs  truetype.rs
csgrs/src/toolpath/: mod.rs
mobile/: Cargo.toml  Makefile  manifest.yaml
mobile/mobile.xcodeproj/: project.pbxproj
mobile/src/: lib.rs
rust/: AGENTS.md  Cargo.toml  build.ps1  precompute_parity_tables.py  rust-toolchain.toml
rust/examples/: gen_font_atlas.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: api_common.rs  api_types.rs  common_api.rs  common_api_types.rs  mod.rs  renderer.rs  scene_composer_api.rs  scene_composer_api_types.rs  screenshot_api.rs  simple.rs  structure_designer_api.rs  structure_designer_api_types.rs  triangle_shader.wgsl
rust/src/common/: atomic_structure.rs  atomic_structure_utils.rs  common_constants.rs  crystal_utils.rs  csg_types.rs  csg_utils.rs  diamond_hydrogen_passivation.rs  gadget.rs  he_mesh.rs  mod.rs  mol_exporter.rs  poly_mesh.rs  quad_mesh.rs  scene.rs  serialization_utils.rs  simulation.rs  surface_point_cloud.rs  unique_3d_points.rs  xyz_loader.rs  xyz_saver.rs
rust/src/crystolecule/: AGENTS.md  atomic_constants.rs  atomic_structure_diff.rs  atomic_structure_utils.rs  common_constants.rs  crystolecule_constants.rs  csg_types.rs  csg_utils.rs  drawing_plane.rs  gadget.rs  guided_placement.rs  hydrogen_passivation.rs  mod.rs  mol_exporter.rs  motif.rs  motif_bond_inference.rs  motif_parser.rs  motif_symmetry.rs  poly_mesh.rs  scene.rs  serialization_utils.rs  simulation.rs  structure.rs  supercell.rs  surface_point_cloud.rs  unique_3d_points.rs  unit_cell_struct.rs  unit_cell_symmetries.rs  weld.rs  xyz_loader.rs  xyz_saver.rs
rust/src/display/: atomic_tessellator.rs  coordinate_system_tessellator.rs  csg_to_poly_mesh.rs  gadget.rs  guided_placement_tessellator.rs  mod.rs  poly_mesh.rs  poly_mesh_tessellator.rs  preferences.rs  scene_tessellator.rs  surface_point_cloud.rs  surface_point_tessellator.rs  unit_cell_wireframe_tessellator.rs
rust/src/expr/: expr.rs  lexer.rs  mod.rs  parser.rs  validation.rs
rust/src/geo_tree/: AGENTS.md  batched_implicit_evaluator.rs  csg_cache.rs  (+6 more)
rust/tests/: atomic_structure_test.rs  batched_implicit_evaluator_test.rs  crystolecule.rs  csg_cache_test.rs  daabox_test.rs  display.rs  drawing_plane_test.rs  expr.rs  expr_evaluation_test.rs  expr_test.rs  expr_validation_test.rs  expr_vector_test.rs  geo_tree.rs  integration.rs  kernel_test.rs  memory_bounded_lru_cache_test.rs  mol_exporter_test.rs  motif_parser_test.rs  multi_threaded_batch_evaluator_test.rs  navigation_history_test.rs  node_dependency_analysis_tests.rs  renderer.rs  structure_designer.rs  structure_designer_test.rs  unit_cell_symmetries_test.rs  unit_cell_test.rs  util.rs
(+1589 files in other folders)
