[package]
name = "atomcad"
version = { workspace = true }
publish = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[workspace.package]
version = "0.1.0"
publish = false
authors = ["Machine Phase Systems <hello@machinephase.systems>"]
license = "MPL-2.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
# atomCAD
app = { package = "atomcad-app", path = "crates/app" }
common = { package = "atomcad-common", path = "crates/common" }
# Chemistry
periodic-table = { package = "atomcad-periodic-table", path = "crates/periodic-table" }
# Entity Component System
bevy_ecs = "0.18"
ecs = { package = "atomcad-ecs", path = "crates/ecs" }
# Input
keyboard = { package = "atomcad-keyboard", path = "crates/keyboard" }
# Logging
log = "0.4"
logging = { package = "atomcad-logging", path = "crates/logging" }
# Math
ultraviolet = { version = "0.10" }
# Rust
anyhow = "1"
static_assertions = "1"
# Serialization
serde = { version = "1", features = ["derive"] }
# Windowing
gui = { package = "atomcad-gui", path = "crates/gui" }
menu = { package = "atomcad-menu", path = "crates/menu" }
window = { package = "atomcad-window", path = "crates/window" }
winit = "0.30"
winit-runner = { package = "atomcad-winit-runner", path = "crates/winit-runner" }
# macOS platform support
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

[dependencies]
# atomCAD
app = { workspace = true }
# Entity Component System
ecs = { workspace = true }
# Logging
log = { workspace = true }
logging = { workspace = true }
# Rust
anyhow = { workspace = true }
# Windowing
gui = { workspace = true }
menu = { workspace = true }
window = { workspace = true }
winit = { workspace = true }
winit-runner = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
# Web platform support
wasm-bindgen = "0.2.92"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
# Web platform support
wasm-bindgen-test = "0.3.42"

[target.'cfg(target_os = "android")'.dependencies]
# Android platform support
android-activity = { version = "0.6", features = ["game-activity"] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS platform support
objc2-foundation = { workspace = true }
