[package]
name = "atomcad"
version = "0.1.0"
authors = ["Machine Phase Systems <hello@machinephase.systems>"]
license = "MPL-2.0"
edition = "2021"

[features]
cargo-clippy = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[workspace.dependencies]
common = { package = "atomcad-common", path = "crates/common" }
futures = "0.3.28"
log = "0.4.19"
molecule = { package = "atomcad-molecule", path = "crates/molecule" }
periodic-table = { package = "atomcad-periodic-table", path = "crates/periodic-table" }
petgraph = { version = "0.7", features = ["serde-1"] }
render = { package = "atomcad-render", path = "crates/render" }
scene = { package = "atomcad-scene", path = "crates/scene" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
ultraviolet = { version = "0.9.1", features = ["serde"] }
winit = { version = "0.30", features = [
    "android-native-activity",
] }

[dependencies]
common = { workspace = true }
env_logger = "0.11"
futures = { workspace = true }
log = { workspace = true }
molecule = { workspace = true }
nom = "7.1.3"
periodic-table = { workspace = true }
render = { workspace = true }
scene = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ultraviolet = { workspace = true }
winit = { workspace = true }

# android:
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.14"

# Windows
[target.'cfg(target_os = "windows")'.dependencies]
muda = "0.9.1"
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging"] }

# macOS:
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.42"
