[package]
name = "atomcad"
version = { workspace = true }
publish = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[workspace.package]
version = "0.1.0"
publish = false
authors = ["Machine Phase Systems <hello@machinephase.systems>"]
license = "MPL-2.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
# atomCAD
app = { package = "atomcad-app", path = "crates/app" }
# Entity Component System
bevy_ecs = "0.18"
ecs = { package = "atomcad-ecs", path = "crates/ecs" }
# Input
keyboard = { package = "atomcad-keyboard", path = "crates/keyboard" }
# Logging
log = "0.4"
logging = { package = "atomcad-logging", path = "crates/logging" }
# Rust
anyhow = "1"
# Windowing
window = { package = "atomcad-window", path = "crates/window" }
winit = "0.30"
winit-runner = { package = "atomcad-winit-runner", path = "crates/winit-runner" }

[dependencies]
# atomCAD
app = { workspace = true }
# Entity Component System
ecs = { workspace = true }
# Logging
log = { workspace = true }
logging = { workspace = true }
# Windowing
window = { workspace = true }
winit = { workspace = true }
winit-runner = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
# Web platform support
wasm-bindgen = "0.2.92"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
# Web platform support
wasm-bindgen-test = "0.3.42"
