[package]
name = "rust_lib_flutter_cad"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.7.0"
dlopen = "0.1.8"
lazy_static = "1.4.0"
wgpu = "23.0.1"
tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1.16", features = [ "derive" ] }
glam = "0.29.2"
lru = "0.12.1"
