[package]
name = "rust_lib_flutter_cad"
version = "0.1.0"
publish = false
authors = ["Machine Phase Systems <hello@machinephase.systems>"]
license = "MPL-2.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.10.0"
dlopen = "0.1.8"
lazy_static = "1.4.0"
wgpu = "23.0.1"
tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1.16", features = [ "derive" ] }
glam = "0.29.2"
lru = "0.12.1"
thiserror = "2.0.12"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.0"
csgrs = "0.20.1"
nalgebra = "^0.33"
geo = "^0.29.3"
# pyo3 = { version = "0.22", features = ["auto-initialize"] }

[build-dependencies]
flutter_rust_bridge_codegen = "2.10.0"
serde_with = "3.5.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
