[package]
name = "atomcad-app"
version = { workspace = true }
publish = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = ["console_error_panic_hook"]

[dependencies]
# Entity Component System
bevy_ecs = { workspace = true }
ecs = { workspace = true }
# Rust
anyhow = { workspace = true }
log = { workspace = true }
readonly = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
# Web platform support
console_error_panic_hook = { version = "0.1.7", optional = true }
