[package]
name = "atomcad-asbytes"
version = { workspace = true }
publish = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Math
ultraviolet = { workspace = true }
# Serialization
serde = { workspace = true }
