[package]
name = "atomcad-common"
version = "0.1.0"
authors = ["Mark Friedenbach <mark@friedenbach.org>", "Lachlan Sneff <lachlan.sneff@gmail.com>"]
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { git = "https://github.com/rust-windowing/winit", rev = "924f3323b56190ef93829af080fcca046c19bc80", features = ["android-native-activity"] }
ultraviolet = "0.9.1"
