[package]
name = "atomcad-dynamics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scene = { workspace = true }
periodic-table = { workspace = true }
petgraph = { workspace = true }
ultraviolet = { workspace = true }
