[package]
name = "atomcad-event-loop-waker"
version.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
# Bevy
bevy = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Platform
ctrlc = "3"
