[package]
name = "atomcad-menu"
version = { workspace = true }
publish = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
# atomCAD
app = { workspace = true }
# Entity Component System
ecs = { workspace = true }
# Utilities
anyhow = { workspace = true }
# Windowing
winit = { workspace = true }
winit-runner = { workspace = true }
