[package]
name = "atomcad-molecule"
version = "0.1.0"
authors = [
    "Mark Friedenbach <mark@friedenbach.org>",
    "Seth Hinz <sethhinz@me.com>",
]
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
render = { workspace = true }
periodic-table = { workspace = true }
ultraviolet = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = { workspace = true }
lazy_static = "1.4.0"
lib3dmol = "0.4"
serde_with = "3.3.0"
