[package]
name = "atomcad-periodic-table"
version = { workspace = true }
publish = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Bevy
bevy = { workspace = true }
# Serialization
serde = { workspace = true }
# Utilities
asbytes = { workspace = true }
static_assertions = { workspace = true }
