[package]
name = "atomcad-periodic-table"
version = "0.1.0"
authors = ["Mark Friedenbach <mark@friedenbach.org>", "Lachlan Sneff <lachlan.sneff@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.common]
package = "atomcad-common"
path = "../common"

[dependencies]
ultraviolet = "0.9.1"
static_assertions = "1"
