[package]
name = "atomcad-periodic-table"
version = "0.1.0"
authors = [
    "Mark Friedenbach <mark@friedenbach.org>",
    "Lachlan Sneff <lachlan.sneff@gmail.com>",
]
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ultraviolet = { workspace = true }
static_assertions = "1"
common = { workspace = true }
