[package]
name = "atomcad-render"
version = "0.1.0"
authors = [
    "Mark Friedenbach <mark@friedenbach.org>",
    "Lachlan Sneff <lachlan.sneff@gmail.com>",
]
license = "MPL-2.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wgpu = { version = "0.17.0", features = ["webgl"] }
futures = "0.3.28"
static_assertions = "1"
log = "0.4.19"
winit = { git = "https://github.com/rust-windowing/winit", rev = "924f3323b56190ef93829af080fcca046c19bc80", features = [
    "android-native-activity",
] }
parking_lot = "0.12"
common = { workspace = true }
periodic-table = { workspace = true }
ultraviolet = { workspace = true }

[build-dependencies]
shaderc = "0.8.2"
