[package]
name = "atomcad-render"
version = "0.1.0"
authors = [
    "Mark Friedenbach <mark@friedenbach.org>",
    "Lachlan Sneff <lachlan.sneff@gmail.com>",
]
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
common = { workspace = true }
futures = { workspace = true }
include-wgsl-oil = "0.2.6"
log = { workspace = true }
naga_oil = "0.14.0"
parking_lot = "0.12"
periodic-table = { workspace = true }
static_assertions = "1"
ultraviolet = { workspace = true }
wgpu = { version = "0.20", features = ["webgl"] }
winit = { workspace = true }
