[package]
name = "atomcad-scene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
render = { workspace = true }
periodic-table = { workspace = true }
ultraviolet = { workspace = true }
petgraph = "0.6.3"
