[package]
name = "simulation-import"
authors = [
    "Philip Turner <philipturner.ar@gmail.com>",
    "Alexey Novikov <former.token@gmail.com>",
]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = 'abort'

[dependencies]
anyhow = "1.0"
colored = "2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"