[package]
name = "atomcad-winit-runner"
version = { workspace = true }
publish = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
# atomCAD
app = { workspace = true }
# Entity Component System
bevy_ecs = { workspace = true }
ecs = { workspace = true }
# Utilities
anyhow = { workspace = true }
# Windowing
winit = { workspace = true }
